Freestyle causes crash on render #44231

Closed
opened 2015-04-02 08:57:32 +02:00 by Andre Lewis · 7 comments

Rendering overlapping nurbs spheres with freestyle causes a crash.

I render frame 21, and get this message then blender crashes
Warning: edge 2706 - 2738 appears twice, correcting
Warning: edge 2738 - 2706 appears twice, correcting

See blend file here:
https://www.dropbox.com/s/f70tcadtz3w3nkp/render.crash.zip?dl=0


Blender 2.74 (sub 0) System Information


Blender:


version 2.74 (sub 0), branch b'master', commit date b'2015-03-31' b'13:39', hash b'000dfc0', b'Release'
build date: b'2015-03-31', b'14:55:13'
platform: b'Linux:64bit'
binary path: '/home/alewis/blender/blender-2.74-linux-glibc211-x86_64/blender'
build cflags: b'-DWITH_FREESTYLE -pipe -fPIC -funsigned-char -fno-strict-aliasing -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE -fopenmp -DNDEBUG -O2 -msse -msse2 -DWITH_MOD_FLUID -DWITH_MOD_OCEANSIM -D__LITTLE_ENDIAN__ -DWITH_AUDASPACE -DWITH_AVI -DWITH_OPENNL -DHAVE_STDBOOL_H'
build cxxflags: b'-pipe -fPIC -funsigned-char -fno-strict-aliasing -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE -fopenmp -fpermissive -D__STDC_CONSTANT_MACROS -DNDEBUG -O2 -msse -msse2 -DWITH_MOD_FLUID -DWITH_MOD_OCEANSIM -D__LITTLE_ENDIAN__ -DWITH_AUDASPACE -DWITH_AVI -DWITH_OPENNL -DHAVE_STDBOOL_H'
build linkflags: b'-lrt'
build system: b'SCons'

Python:


version: 3.4.2 (default, Nov 24 2014, 15:22:10)
[GCC 4.7.1]

FFmpeg:


'avcodec':' ''55, 39, 101'
'avdevice':' ''55, 5, 100'
'avformat':' ''55, 19, 104'
'avutil':' ''52, 48, 101'
'swscale':' '' 2, 5, 101'

SDL


Version: Unknown
Loading method: dynamically loaded by Blender (WITH_SDL_DYNLOAD=ON)
WARNING: Blender could not load SDL library

Other Libraries:


OpenColorIO: 1, 0, 9
OpenImageIO: 1, 4, 16
OpenShadingLanguage: 1, 5, 11

OpenGL


renderer: 'GeForce GT 650M/PCIe/SSE2'
vendor: 'NVIDIA Corporation'
version: '4.4.0 NVIDIA 331.113'

Cycles


CPU device capabilities: SSE2 SSE3 SSE41 AVX

CUDA device capabilities:
Error initializing CUDA: Unknown error

Rendering overlapping nurbs spheres with freestyle causes a crash. I render frame 21, and get this message then blender crashes Warning: edge 2706 - 2738 appears twice, correcting Warning: edge 2738 - 2706 appears twice, correcting See blend file here: https://www.dropbox.com/s/f70tcadtz3w3nkp/render.crash.zip?dl=0 **** # Blender 2.74 (sub 0) System Information **** Blender: **** version 2.74 (sub 0), branch b'master', commit date b'2015-03-31' b'13:39', hash b'000dfc0', b'Release' build date: b'2015-03-31', b'14:55:13' platform: b'Linux:64bit' binary path: '/home/alewis/blender/blender-2.74-linux-glibc211-x86_64/blender' build cflags: b'-DWITH_FREESTYLE -pipe -fPIC -funsigned-char -fno-strict-aliasing -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE -fopenmp -DNDEBUG -O2 -msse -msse2 -DWITH_MOD_FLUID -DWITH_MOD_OCEANSIM -D__LITTLE_ENDIAN__ -DWITH_AUDASPACE -DWITH_AVI -DWITH_OPENNL -DHAVE_STDBOOL_H' build cxxflags: b'-pipe -fPIC -funsigned-char -fno-strict-aliasing -D_LARGEFILE_SOURCE -D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE -fopenmp -fpermissive -D__STDC_CONSTANT_MACROS -DNDEBUG -O2 -msse -msse2 -DWITH_MOD_FLUID -DWITH_MOD_OCEANSIM -D__LITTLE_ENDIAN__ -DWITH_AUDASPACE -DWITH_AVI -DWITH_OPENNL -DHAVE_STDBOOL_H' build linkflags: b'-lrt' build system: b'SCons' Python: **** version: 3.4.2 (default, Nov 24 2014, 15:22:10) [GCC 4.7.1] FFmpeg: **** 'avcodec':' ''55, 39, 101' 'avdevice':' ''55, 5, 100' 'avformat':' ''55, 19, 104' 'avutil':' ''52, 48, 101' 'swscale':' '' 2, 5, 101' SDL **** Version: Unknown Loading method: dynamically loaded by Blender (WITH_SDL_DYNLOAD=ON) WARNING: Blender could not load SDL library Other Libraries: **** OpenColorIO: 1, 0, 9 OpenImageIO: 1, 4, 16 OpenShadingLanguage: 1, 5, 11 OpenGL **** renderer: 'GeForce GT 650M/PCIe/SSE2' vendor: 'NVIDIA Corporation' version: '4.4.0 NVIDIA 331.113' Cycles **** CPU device capabilities: SSE2 SSE3 SSE41 AVX CUDA device capabilities: Error initializing CUDA: Unknown error
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AndreLewis

Added subscriber: @AndreLewis
Tamito Kajiyama was assigned by Sergey Sharybin 2015-04-02 11:13:53 +02:00

Added subscribers: @kjym3, @Sergey

Added subscribers: @kjym3, @Sergey

@AndreLewis, next time please attach system info as a file, not inline into a report text. It'll help keeping readability of the report :)

@kjym3, same crash happens in 2.73a actually. But not sure, is it caused by some mesh created by freestyle itself or it's an issue somewhere else?

@AndreLewis, next time please attach system info as a file, not inline into a report text. It'll help keeping readability of the report :) @kjym3, same crash happens in 2.73a actually. But not sure, is it caused by some mesh created by freestyle itself or it's an issue somewhere else?
Author

Converting the nurbs to meshes allows me to render to frame 71, where it appears to crash again, however this time it could be cache in EXR. Possibly a different bug, but still a crash.

Converting the nurbs to meshes allows me to render to frame 71, where it appears to crash again, however this time it could be cache in EXR. Possibly a different bug, but still a crash.

This issue was referenced by efd774ce5a

This issue was referenced by efd774ce5a8536be526935ba118a10d7b2a843ef

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44231
No description provided.